--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dttt-backend",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
@@ -20,6 +20,7 @@
   "dependencies": {
     "@tsconfig/recommended": "^1.0.8",
     "@vertikarl/ts-logger": "https://github.com/vertiKarl/ts-logger",
+    "bcryptjs": "^3.0.0",
     "discord.js": "^14.17.3",
     "express": "^4.21.2"
   }
